manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linkding
  labels:
    name: linkding
    app: linkding
